ajout learners et dataconstructors