@@ -7,7 +7,7 @@ import org.nd4j.linalg.api.ndarray.INDArray;
 import java.util.*;
 
 public class RandomExperienceReplay<A> extends ExperienceReplay<A> {
-    protected List<Interaction<A>> memory ;
+    protected ArrayList<Interaction<A>> memory ;
     private Random random ;
     public RandomExperienceReplay(int maxSize,long seed,ArrayList<String> file){
         super(maxSize,file);
@@ -18,10 +18,9 @@ public class RandomExperienceReplay<A> extends ExperienceReplay<A> {
     @Override
     public void addInteraction(Replayable<A> replayable) {
         Interaction<A> interaction = (Interaction<A>)replayable ;
-        LinkedList<Interaction<A>> memory = (LinkedList<Interaction<A>>)this.memory ;
         if(memory.size() == this.maxSize)
-            memory.removeLast();
-        memory.addFirst(interaction);
+            memory.remove(0);
+        memory.add(interaction);
     }
 
 
@@ -38,7 +37,7 @@ public class RandomExperienceReplay<A> extends ExperienceReplay<A> {
 
     @Override
     public void resetMemory() {
-        this.memory = new LinkedList<Interaction<A>>();
+        this.memory = new ArrayList<Interaction<A>>();
     }
 
     @Override
